remove total revenue from stats